--- a/commands.html
+++ b/commands.html
@@ -3,7 +3,9 @@
     <head>
     </head>
     <body>
-      <button id="remove-adds">Remove</button>
+      <ul>
+        <li>Something will be here some day</li>
+      </ul>
     </body>
 	<script src="actions.js"></script>
   </html>
